[gd_scene load_steps=5 format=3 uid="uid://cuxv6f0d1jowy"]

[ext_resource type="Script" uid="uid://dch7w82g13oe8" path="res://UI/Inventory/Chest Inventory/chest_inventory_dialog.gd" id="1_7she5"]
[ext_resource type="Script" uid="uid://6qtl21jsqjm6" path="res://UI/Inventory/drag_drop_grid.gd" id="2_qiu63"]
[ext_resource type="PackedScene" uid="uid://0pgxo3fupy5c" path="res://UI/Inventory/drag_drop_cell.tscn" id="3_qiu63"]
[ext_resource type="PackedScene" uid="uid://qtbc5ermv8t6" path="res://UI/Inventory/drop_overlay.tscn" id="4_6024w"]

[node name="ChestInventoryDialog" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 443.0
offset_right = -443.0
offset_bottom = -366.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7she5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Treasure Chest"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5
script = ExtResource("2_qiu63")
cell_scene = ExtResource("3_qiu63")

[node name="DragDropCell" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell2" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell3" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell4" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell5" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell6" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell7" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell8" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell9" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell10" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell11" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell12" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell13" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell14" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell15" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell16" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell17" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell18" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell19" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="DragDropCell20" parent="VBoxContainer/GridContainer" instance=ExtResource("3_qiu63")]
layout_mode = 2

[node name="TakeAllButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Take All"

[node name="DropOverlay" parent="." instance=ExtResource("4_6024w")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TakeAllButton" to="." method="_on_take_all_button_pressed"]
